@@ -3,6 +3,7 @@
 + Cleaned up entity constructors.
 + Added entity constructors with Vector2.
 + Added read and write Aligned Dimensions.
++ (fixed) AciColor negative index issue when loading files.
 
 [0.2.1 - 2012/11/16] 
 + Added MTEXT entity, with basic text formatting.
